feat: download certificate

--- a/src/certificates.html
+++ b/src/certificates.html
@@ -199,28 +199,31 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 px-0 position-relative">
-                    <img src="./assets/images/Bg.svg" class="certificate-bg-img" alt="">
+                    <img src="./assets/images/Airplane Plane2.jpg" class="certificate-bg-img" alt="">
                 </div>
                 <div class="col-12 px-0 position-absolute">
-                    <div class="certificatepage_item__wrapper">
-                        <a href="assets/images/Huseyn Mammadov Frontend.pdf" download="certificate.pdf">
-                            <!-- Your image -->
-                            <img src="./assets/images/certificate_img.svg" class="certificatepage_img"
-                                alt="Certificate Image">
-                        </a>
-                        <a href="assets/images/Huseyn Mammadov Frontend.pdf" download="certificate.pdf">
-                            <!-- Your image -->
-                            <img src="./assets/images/certificate-2.svg" class="certificatepage_img"
-                                alt="Certificate Image">
-                        </a>
-                        <a href="assets/images/Huseyn Mammadov Frontend.pdf" download="certificate.pdf">
-                            <!-- Your image -->
-                            <a href="assets/images/Huseyn Mammadov Frontend.pdf" download="certificate.pdf">
+                    <div>
+                        <div class="certificatepage_item__wrapper">
+                            <a href="./assets/images/ISO 9001 2015 HM.pdf" download="certificate.pdf">
                                 <!-- Your image -->
-                                <img src="./assets/images/certificate-3.svg" class="certificatepage_img"
+                                <img src="./assets/images/certificate_img.svg" class="certificatepage_img"
                                     alt="Certificate Image">
                             </a>
-                        </a>
+                            <a href="assets/images/ASA Member Certificate HORIZON MECHANICS L.L.C-FZ.pdf"
+                                download="certificate.pdf">
+                                <!-- Your image -->
+                                <img src="./assets/images/certificate-2.svg" class="certificatepage_img"
+                                    alt="Certificate Image">
+                            </a>
+                            <a>
+                                <!-- Your image -->
+                                <a>
+                                    <!-- Your image -->
+                                    <img src="./assets/images/certificate-3.svg" class="certificatepage_img"
+                                        alt="Certificate Image">
+                                </a>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
