--- a/src/index.html
+++ b/src/index.html
@@ -221,7 +221,7 @@
                     <p class="about_description">
                         Horizon Mechanics LLC-FZ emerges as a trusted partner in the aviation supply chain, rooted in
                         the
-                        strategic hub of MeydanFree Zone, Dubai, UAE.
+                        strategic hub of Meydan Free Zone, Dubai, UAE.
                     </p><br>
                     <p class="about_description">
                         Our expertise covers the sales of spare parts, AOG, exchange, repair and maintenance,
@@ -333,13 +333,11 @@
                         transparency</p>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-6">
-                    <p class="business_subtitle mt-3 mt-lg-0">We understand MRO services can be costly, but we have got
-                        you covered.
-                        We operate a
-                        cost-effective model that doesn’t
-                        compromise on quality. With our lean approach, we minimize waste and optimize resources -
-                        savings we pass directly to
-                        you!</p>
+                    <p class="business_subtitle mt-3 mt-lg-0">At Horizon Mechanics, we are dedicated to upholding the
+                        highest standards of
+                        professionalism, reliability, and customer service in the aviation industry. With a relentless
+                        commitment to excellence, transparency, and compliance, we prioritize the needs of our
+                        customers and strive to exceed their expectations at every turn.</p>
                 </div>
             </div>
             <div class="row mt-sm-5">
@@ -448,23 +446,24 @@
                         <img src="./assets/images/value_icon.svg" class="value_icon" alt="">
                         <div class="value_item__wrapper">
                             <p class="value_item__title">
-                                Market agility
+                                Competitive Pricing
                             </p>
                             <p class="value_item__description">
-                                Swift adaptation to industry changes and client needs.
+                                Offering cost-effective solutions through competitive rates.
                             </p>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-12 col-lg-4 col-md-6 px-0 px-sm-1">
                     <div class="value_wrapper">
-                        <img src="./assets/images/value_icon_2.svg" class="value_icon" alt="">
+                        <img src="./assets/images/certificate (1).png" width="60px" height="60px" class="value_icon"
+                            alt="">
                         <div class="value_item__wrapper">
                             <p class="value_item__title">
-                                Flexibility
+                                Stringent Certification
                             </p>
                             <p class="value_item__description">
-                                Tailoring solutions to meet diverse customer requirements.
+                                Maintaining all necessary certifications and compliance.
                             </p>
                         </div>
                     </div>
@@ -474,7 +473,7 @@
                         <img src="./assets/images/value_icon_3.svg" class="value_icon" alt="">
                         <div class="value_item__wrapper">
                             <p class="value_item__title">
-                                High Reliability
+                                Uncompromising Reliability
                             </p>
                             <p class="value_item__description">
                                 Consistently dependable in quality and service.
@@ -487,7 +486,7 @@
                         <img src="./assets/images/value_icon_4.svg" class="value_icon" alt="">
                         <div class="value_item__wrapper">
                             <p class="value_item__title">
-                                Partnerships
+                                Strong Partnerships
                             </p>
                             <p class="value_item__description">
                                 Building strong, collaborative relationships.
@@ -497,13 +496,14 @@
                 </div>
                 <div class="col-sm-12 col-lg-4 col-md-6 px-0 px-sm-1">
                     <div class="value_wrapper">
-                        <img src="./assets/images/value_icon_5.svg" class="value_icon" alt="">
+                        <img src="./assets/images/repairing.png" style="width: 60px; height: 60px;" class="value_icon"
+                            alt="">
                         <div class="value_item__wrapper">
                             <p class="value_item__title">
-                                Customer synergy
+                                Technical Expertise
                             </p>
                             <p class="value_item__description">
-                                Aligning with client desires for mutual benefit.
+                                Leveraging specialized knowledge for valuable guidance.
                             </p>
                         </div>
                     </div>
@@ -513,10 +513,10 @@
                         <img src="./assets/images/value_icon_6.svg" class="value_icon" alt="">
                         <div class="value_item__wrapper">
                             <p class="value_item__title">
-                                Communication
+                                Customer Service
                             </p>
                             <p class="value_item__description">
-                                Ensuring clear, timely, and effective dialogue.
+                                Prioritizing responsive support and open communication.
                             </p>
                         </div>
                     </div>
@@ -543,8 +543,12 @@
                         <img class="swiper-slide supplier_img" src="./assets/images/partners6.svg" alt="">
                         <img class="swiper-slide supplier_img" src="./assets/images/partners7.svg" alt="">
                         <img class="swiper-slide supplier_img" src="./assets/images/partners8.svg" alt="">
-                        <img class="swiper-slide supplier_img" src="./assets/images/partners9.svg" alt=""><img
-                            class="swiper-slide supplier_img" src="./assets/images/partners10.svg" alt="">
+                        <img class="swiper-slide supplier_img" src="./assets/images/partners9.svg" alt="">
+                        <img class="swiper-slide supplier_img" src="./assets/images/partners10.svg" alt="">
+                        <img class="swiper-slide supplier_img" src="./assets/images/Mel.jpg" alt="">
+
+                        <img class="swiper-slide supplier_img" src="./assets/images/PDQ_FDH_Stacked_Logo.png" alt="">
+
                         <!-- <img class="swiper-slide" src="./assets/images/partners.svg" alt="">
                         <img class="swiper-slide" src="./assets/images/partners.svg" alt="">
                         <img class="swiper-slide" src="./assets/images/partners.svg" alt=""> -->
@@ -560,8 +564,10 @@
                         <img class="supplier_img" src="./assets/images/partners6.svg" alt="">
                         <img class="supplier_img" src="./assets/images/partners7.svg" alt="">
                         <img class="supplier_img" src="./assets/images/partners8.svg" alt="">
-                        <img class="supplier_img" src="./assets/images/partners9.svg" alt=""><img class="supplier_img"
-                            src="./assets/images/partners10.svg" alt="">
+                        <img class="supplier_img" src="./assets/images/Mel.jpg" alt=""><img class="supplier_img"
+                            src="./assets/images/partners8.svg" alt="">
+                        <img class="supplier_img" src="./assets/images/PDQ_FDH_Stacked_Logo.png" alt=""><img
+                            class="supplier_img" src="./assets/images/partners10.svg" alt="">
                         <!-- <img class="swiper-slide" src="./assets/images/partners.svg" alt="">
                                         <img class="swiper-slide" src="./assets/images/partners.svg" alt="">
                                         <img class="swiper-slide" src="./assets/images/partners.svg" alt=""> -->
@@ -580,10 +586,10 @@
                         class="certificates_bg__image__mobile" alt="">
 
                 </div>
-                <div class="row position-absolute">
+                <div class="row position-absolute mt-5">
                     <div class="col-12">
                         <div class="certificate_section__wrapper">
-                            <p class="certificates_header__title">Revolutionizing Aviation, <br>One Innovation at a Time
+                            <p class="certificates_header__title">One Innovation at a Time
                             </p>
                             <p class="certificates_header__subtitle">Our experienced team of aviation experts will
                                 collaborate
@@ -596,14 +602,28 @@
                             <a href="./contact.html"><button class="certificate_btn">Get in Touch</button></a>
                         </div>
                     </div>
-                    <div class="col-12 mt-3 ps-4 ps-sm-0">
+                    <!-- <div class="col-12 mt-3 ps-4 ps-sm-0">
                         <div class="certificate_item__wrapper">
-                            <p class="certificate_wrapper__title">Our certificates</p>
+                            
                             <div class="certificate_wrapper ps-2 ps-sm-0">
                                 <img src="./assets/images/certificate_img.svg" class="certificate_img" alt="">
                                 <img src="./assets/images/certificate-2.svg" class="certificate_img" alt=""><img
                                     src="./assets/images/certificate-3.svg" class="certificate_img" alt="">
                             </div>
+                        </div>
+
+                    </div> -->
+
+                </div>
+            </div>
+            <div class="row mt-4 mb-4">
+                <div class="col-12">
+                    <div class="certificate_item__wrapper">
+                        <!-- <p class="certificate_wrapper__title">Our certificates</p> -->
+                        <div class="certificate_wrapper ps-2 ps-sm-0">
+                            <img src="./assets/images/certificate_img.svg" class="certificate_img" alt="">
+                            <img src="./assets/images/ASA-logo-blue 1.png" width="150px" class="certificate_img"
+                                alt=""><img src="./assets/images/certificate-3.svg" class="certificate_img" alt="">
                         </div>
                     </div>
                 </div>
@@ -628,7 +648,7 @@
                                 <input type="text" placeholder="Your email address" class="email_input">
                                 <img src="./assets/images/email_icon.svg" class="email_icon" alt="">
                             </div>
-                            <p class="copyrights">© 2024 Horizons Mechanic. All rights reserved.</p>
+                            <p class="copyrights">© 2024 Horizon Mechanics. All rights reserved.</p>
                             <div class="social_meadia__wrapper">
                                 <p style="color: #262626;
                                                         font-size: 16px;
@@ -691,6 +711,9 @@
                                 <a href="./index.html#repair">
                                     <p>Repair management</p>
                                 </a>
+                                <a href="./contact.html">
+                                    <p>Request a quote</p>
+                                </a>
 
                             </div>
                         </div>
@@ -698,9 +721,9 @@
 
                             <div class="contact_links" style="margin-top: 0px !important;">
 
-                                <a href="./contact.html">
+                                <!-- <a href="./contact.html">
                                     <p>Request a quote</p>
-                                </a>
+                                </a> -->
 
                             </div>
                         </div>
@@ -747,7 +770,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-lg-5 col-md-5 col-sm-5 mt-4 footer_item">
+                        <div class="col-lg-5 col-md-5 col-sm-5 mt-5 footer_item">
                             <p class="footer_header interested">
                                 Interested in trading with us?
                             </p>
@@ -806,10 +829,10 @@
             spaceBetween: 24,
             // disableOnInteraction:false,
             loop: true,
-            // autoplay: {
-            //   delay: 2500,
-            //   disableOnInteraction: false,
-            // },
+            autoplay: {
+                delay: 1000,
+                disableOnInteraction: false,
+            },
             pagination: {
                 el: ".swiper-pagination",
                 clickable: true,
