fix: company name

--- a/src/index.html
+++ b/src/index.html
@@ -755,7 +755,7 @@
                                             alt=""></a>
                                 </div>
                             </div>
-                            <p class="copyrights">© 2024 Horizons Mechanic. All rights reserved.</p>
+                            <p class="copyrights">© 2024 Horizon Mechanics. All rights reserved.</p>
                             <div class="social_meadia__wrapper">
                                 <p style="color: #262626;
                                                                                 font-size: 16px;
