fix: text changes

--- a/src/certificates.html
+++ b/src/certificates.html
@@ -156,40 +156,48 @@
                 </div>
                 <div class="row">
                     <div class="col-12 mt-2">
-                        <p class="page_description">Horizon Mechanics LLC is proud to be an official member of the
-                            Aviation Suppliers Association
-                            (ASA), a demonstration to
-                            our commitment to excellence in the aviation industry. As an ASA member, we exclusively
-                            collaborate with internationally
-                            recognized manufacturing companies, distributors, and suppliers, ensuring that our clients
-                            have access to top-quality,
-                            highly reliable aviation spare parts.</p><br>
-                        <p class="page_description">Horizon Mechanics LLC has established the highest industry standards
-                            through strict adherence
-                            to ASA, EASA, and FAA
-                            regulations, while placing a premium on exceptional service quality. Each component we
-                            supply is accompanied by the
-                            necessary certifications, guaranteeing its authenticity and reliability.</p><br>
-                        <p class="page_description">In addition to our ASA membership, Horizon Mechanics LLC holds ISO
-                            9001:2015 certification,
-                            reflecting our unwavering
-                            commitment to quality management systems and continuous improvement. This certification
-                            ensures that we consistently
-                            deliver the highest standards of service and reliability to our clients, providing them with
-                            peace of mind and
-                            confidence in our offerings.</p><br>
-                        <p class="page_description">Furthermore, Horizon Mechanics LLC adheres meticulously to all
-                            regulations and laws within
-                            the United Arab Emirates and
-                            holds certification from the Dubai Civil Aviation Authority.</p><br>
-                        <p class="page_description">We are committed to providing maximum value to our clients by
-                            offering only the best
-                            solutions, backed by unparalleled
-                            quality, reliability, and expertise. Our extensive network of trusted partners, coupled with
-                            our stringent quality
-                            control measures, ensures that we consistently exceed our clients' expectations and maintain
-                            our position as a leader in
-                            the aviation industry.</p>
+                        <p class="page_description">
+                            Welcome to Horizon Mechanics LLC
+                        </p> <br>
+                        <p class="page_description">
+                            Your Trusted Partner in Aviation Excellence
+                        </p>
+                        <br>
+                        <p class="page_description">We are thrilled to announce that Horizon Mechanics LLC is now an
+                            official member of the Aviation Suppliers Association
+                            (ASA), solidifying our commitment to excellence within the aviation industry. This milestone
+                            emphasizes our dedication
+                            to delivering superior quality and reliability across all our services.</p><br>
+                        <p class="page_description">As proud ASA members, we collaborate exclusively with
+                            internationally recognized manufacturing companies, distributors,
+                            and suppliers, ensuring that our clients have access to the finest aviation spare parts
+                            available. Our partnerships with
+                            esteemed industry leaders guarantee that every component we provide meets the highest
+                            industry standards and is
+                            accompanied by the necessary certifications, offering unparalleled authenticity and
+                            reliability.</p><br>
+                        <p class="page_description">At Horizon Mechanics LLC, we adhere meticulously to industry
+                            regulations, including those established by ASA, EASA, and
+                            FAA, placing a premium on exceptional service quality at all times. Our adherence to ISO
+                            9001:2015 certification further
+                            underscores our commitment to quality management systems and continual improvement, ensuring
+                            consistent delivery of
+                            excellence to our valued clients.</p><br>
+                        <p class="page_description">In addition to our ASA membership and ISO certification, we are
+                            proud to maintain compliance with all regulations and
+                            laws within the United Arab Emirates, holding certification from the Dubai Civil Aviation
+                            Authority.</p><br>
+                        <p class="page_description">Our mission at Horizon Mechanics LLC is to provide maximum value to
+                            our clients by offering only the best solutions,
+                            backed by unparalleled quality, reliability, and expertise. With our extensive network of
+                            trusted partners and stringent
+                            quality control measures, we consistently exceed expectations and maintain our position as a
+                            leader in the aviation
+                            industry.</p><br>
+                        <p class="page_description">
+                            Join us in our journey towards aviation excellence. Collaborate with Horizon Mechanics LLC
+                            today.
+                        </p>
                     </div>
                 </div>
             </div>
