--- a/src/index.html
+++ b/src/index.html
@@ -219,32 +219,41 @@
             <div class="row">
                 <div class="col-12 about_description">
                     <p class="about_description">
-                        Horizon Mechanics LLC-FZ emerges as a trusted partner in the aviation supply chain, rooted in
-                        the
-                        strategic hub of Meydan Free Zone, Dubai, UAE.
+                        Based in the strategic hub of Meydan Free Zone, Dubai, UAE, Horizon Mechanics LLC-FZ is your
+                        trusted partner in the
+                        aviation supply chain.
                     </p><br>
                     <p class="about_description">
-                        Our expertise covers the sales of spare parts, AOG, exchange, repair and maintenance,
-                        Diagnostics and sourcing services,
-                        aligning with our mission to connect and establish enduring relationships with leading aviation
-                        OEM manufacturers and
-                        suppliers worldwide.
+                        With expertise spanning spare parts sales, AOG support, exchanges, repairs and maintenance,
+                        diagnostics, and sourcing
+                        services, we are committed to connecting with and establishing enduring relationships with
+                        leading aviation OEM
+                        manufacturers and suppliers worldwide.
                     </p> <br>
                     <p class="about_description">
 
-                        Our service initiatives prioritize consistent and dynamic interaction, aiming to fully
-                        comprehend our clients' unique
-                        needs. Through mutual involvement, we pursue continuous improvement to reach common
-                        goals and objectives.
+                        At Horizon Mechanics LLC-FZ, our service initiatives prioritize consistent and dynamic
+                        interaction with our clients. We
+                        aim to fully comprehend their unique needs and collaborate closely to achieve common goals and
+                        objectives through
+                        continuous improvement.
                     </p> <br>
                     <p class="about_description">
-                        Horizon Mechanics LLC-FZ is persistent in its commitment to quality and service, preferring a
-                        personalized approach to
-                        satisfy each client's unique needs. This personalized strategy ensures the highest level of
-                        performance, efficiency, and
-                        reliability in our products and services. We are dedicated to exploring innovative opportunities
-                        that enhance our
-                        service offering and industry presence.
+                        Committed to quality and service excellence, we adopt a personalized approach to meet the
+                        distinctive requirements of
+                        each client. This tailored strategy ensures the highest level of performance, efficiency, and
+                        reliability in our
+                        products and services.
+                    </p><br>
+                    <p class="about_description">
+                        Driven by innovation, we are dedicated to exploring new opportunities that enhance our service
+                        offerings and strengthen
+                        our presence in the industry.
+                    </p><br>
+                    <p class="about_description">
+                        Thank you for choosing Horizon Mechanics LLC-FZ as your aviation partner. We look forward to
+                        serving you with
+                        excellence.
                     </p>
                 </div>
 
@@ -264,8 +273,8 @@
                     <p class="services_title">SERVICES</p>
                 </div>
                 <div class="col-12 ps-0 ps-sm-1">
-                    <p class="services_subtitle">We cover the following areas of
-                        services and spare parts supply</p>
+                    <p class="services_subtitle">Committed to Excellence: Enhancing Your Experience Every Step of the
+                        Way.</p>
                 </div>
             </div>
             <div class="row">
@@ -348,11 +357,13 @@
                         <div class="business_item__wrapper">
                             <p class="business_item__title">Professional Principles</p>
                             <p class="business_item__subtitle">Agility, Reliability & Precision</p>
-                            <p class="business_item__description">At Horizon Mechanics, we uphold the
-                                highest professional principles in every aspect of our operations. We are committed to
-                                excellence, integrity, and
-                                reliability, ensuring that our customers receive nothing but the best products and
-                                services at all times.</p>
+                            <p class="business_item__description">At Horizon Mechanics, we maintain the highest
+                                professional standards throughout our operations. Our unwavering
+                                commitment to excellence, integrity, and reliability guarantees that our customers
+                                always receive superior products and
+                                services. Your satisfaction and trust are paramount, motivating us to consistently
+                                deliver excellence in every aspect of
+                                our business.</p>
                         </div>
                     </div>
                     <div class="business_wrapper">
@@ -360,10 +371,10 @@
                         <div class="business_item__wrapper">
                             <p class="business_item__title">Customer-Centric Approach</p>
                             <p class="business_item__subtitle">Your Needs, Our Priority</p>
-                            <p class="business_item__description">Our customers are at the heart of
-                                everything we do. Our dedicated team is always ready to assist you with bespoke
-                                solutions and swift responses to your
-                                demands in 24/7 mode.</p>
+                            <p class="business_item__description">At Horizon Mechanics, our customers remain at the core
+                                of our operations. Our devoted team stands prepared to provide
+                                you with tailored solutions and prompt responses to your needs, operating in a 24/7
+                                capacity.</p>
                         </div>
                     </div>
                     <div class="business_wrapper">
@@ -589,16 +600,13 @@
                 <div class="row position-absolute mt-5">
                     <div class="col-12">
                         <div class="certificate_section__wrapper">
-                            <p class="certificates_header__title">One Innovation at a Time
+                            <p class="certificates_header__title">
+                                Discover Tailored Solutions with <br> Our Expert Aviation Team
                             </p>
                             <p class="certificates_header__subtitle">Our experienced team of aviation experts will
-                                collaborate
-                                with you to create custom,
-                                cost-effective solutions that meet
+                                collaborate with you to create custom, cost-effective solutions that meet
                                 your needs. Get in touch to learn why airlines all over the world rely on us for
-                                aircraft
-                                spare
-                                parts.</p>
+                                aircraft spare parts.</p>
                             <a href="./contact.html"><button class="certificate_btn">Get in Touch</button></a>
                         </div>
                     </div>
@@ -616,9 +624,9 @@
 
                 </div>
             </div>
-            <div class="row mt-4 mb-4">
-                <div class="col-12">
-                    <div class="certificate_item__wrapper">
+            <div class="row">
+                <div class="col-12 px-0">
+                    <div class="certificate_item__wrapper  pt-4 pb-4">
                         <!-- <p class="certificate_wrapper__title">Our certificates</p> -->
                         <div class="certificate_wrapper ps-2 ps-sm-0">
                             <img src="./assets/images/certificate_img.svg" class="certificate_img" alt="">
